syntax = "proto3";

option go_package = "github.com/shenxiang11/yellowbook-proto/proto";

// web
message ProfileResponse {
  uint64 user_id = 1;
  string email = 2;
  string phone = 3;
  string nickname = 4;
  string birthday = 5;
  string introduction = 6;
}

message SignUpRequest {
  string email = 1;
  string password = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message EditRequest {
  string nickname = 1;
  string birthday = 2;
  string introduction = 3;
}

message SendLoginSMSCodeRequest {
  string phone = 1;
}

message LoginSMSRequest {
  string phone = 1;
  string code = 2;
}


// admin

message User {
  uint64 id = 1;
  string email = 2;
  string phone = 3;
  string nickname = 4;
  string birthday = 5;
  string introduction = 6;
  string create_time = 7;
  string update_time = 8;
}

message GetUserListResponse {
  int64 total = 1;
  repeated User list = 2;
}